--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>
+        {% block title %}{% endblock %} :Twitter-Clone</title>
 </head>
 <body>
-    <h1>Hwllo woeld</h1>
+    {% block body %}
+    {% endblock %}
 </body>
 </html>
