--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
         <form action="" method="POST">
             <input type="text" placeholder="Title" name="title">
             <textarea name="tweet" id="" cols="30" rows="10" placeholder="Write your tweet text here..."></textarea>
+            <button type="submit">Tweet it</button>
         </form>
     </div>
 {% endblock %}
