--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href='{{url_for("style", "style.css")}}'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href='{{url_for("static", filename="style.css")}}'>
+    <link rel="icon" href="{{url_for('static', filename='icon.ico')}}"/>
     <title>
-        {% block title %}{% endblock %} :Twitter-Clone</title>
+        {% block title %}{% endblock %}:{{' '}} Twitter-Clone</title>
 </head>
 <body>
-    {% block body %}
+    {% block nav %}
     {% endblock %}
+
+    <div class="main">
+        {% block body %}
+        {% endblock %}
+    </div>
+</div>
 </body>
 </html>
