--- a/templates/home.html
+++ b/templates/home.html
@@ -6,38 +6,26 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><img src="{{url_for('static', filename='icon.ico')}}" alt="logo" width="30" height="30"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      
-      <form class="d-flex">
-        <input class="form-control me-2 bg-dark" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#search" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="" styrl="color: white;"></span>
+      </button>
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a href="logout" class="btn btn-outline-secondary">Logout</a>
         </li>
       </ul>
-      </form>
     </div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   </div>
 </nav>
 {% endblock %}
@@ -61,9 +49,10 @@
 {% elif tweet_sucess==None %}
 {% endif %}
 
-
-<div class="tweet-card" style="display: block;">
-    <h2></h2>
+<a class="btn btn-primary" data-bs-toggle="collapse" href="#tweet-card" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Tweet Something</a>
+<div class="tweet-card collapse" id="tweet-card">
+  <div class="card card-body">
+    <h4 class="h4">Tweet Something</h4>
     <form method="POST">
         <div class="mb-3">
             <label for="name" class="form-label">Post as..</label>
@@ -79,20 +68,20 @@
         </div>
         <button type="submit" class="btn btn-primary">Tweet it</button>
     </form>
+  </div>
 </div>
 
 {% for tweet in tweets %}
-<div class="card text-center">
+<div class="card">
   <div class="card-header">
-    Featured
+    By {{tweet['username']}}
   </div>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-text"></h5>
+    <p class="card-title">{{tweet['tweet_content']}}</p>
   </div>
   <div class="card-footer text-muted">
-    2 days ago
+    {{ tweet['tweet_at'] }}
   </div>
 </div>
 {% endfor %}
