--- a/templates/login.html
+++ b/templates/login.html
@@ -35,5 +35,6 @@ Login
         </div>
         <button type="submit" class="btn btn-primary">Sign in!</button>
     </form>
+    <p>New here? <a href="/signup" class="link-primary">Signup!</a></p>
 </div>
 {% endblock %}
