--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="/profile">@{{ username }}</a>
         </li>
         <li class="nav-item">
           <a href="logout" class="btn btn-outline-secondary">Logout</a>
