--- a/templates/home.html
+++ b/templates/home.html
@@ -1,34 +1,6 @@
-{% extends "base.html" %}
+{% extends "home_base.html" %}
 
 {% block title %}Home{% endblock %}
-
-{% block nav %}
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="{{url_for('static', filename='images/icon.ico')}}" alt="logo" width="30" height="30"></a>
-    
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#search" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="" styrl="color: white;"></span>
-      </button>
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/profile">@{{ username }}</a>
-        </li>
-        <li class="nav-item">
-          <a href="logout" class="btn btn-outline-secondary">Logout</a>
-        </li>
-      </ul>
-    </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </div>
-</nav>
-{% endblock %}
 
 
 {% block body %}
@@ -42,7 +14,7 @@
         console.log('Hey world')
     }
 </script>
-<div class="body container gap-3" style="margin-top: 80px;">
+<div class="body container gap-3">
   {% if tweet_sucess==True %}
       <div class="alert alert-success" role="alert" onload="waitAndClose()">Your tweet was sucessfully posted.</div>
   {% elif tweet_sucess==False %}
@@ -65,22 +37,22 @@
   </div>
   
 
-{% for tweet in tweets %}
-  <div class="card shadow">
-    <div class="card-header">
-      <a href="{{ tweet['username'] }}"></a>  By {% if tweet['name'] %}
-          {{ ' ' + tweet['name'] }}
-        {% endif %}  @{{tweet['username']}}
+  {% for tweet in tweets %}
+    <div class="card shadow" id="{{ tweet['tweet_id'] }}">
+      <div class="card-header">
+        <a href="/user/{{ tweet['username'] }}"></a>  By {% if tweet['name'] %}
+            {{ ' ' + tweet['name'] }}
+          {% endif %}  @{{tweet['username']}}
+      </div>
+      <div class="card-body">
+        <h5 class="card-text"></h5>
+        <p class="card-title">{{tweet['tweet_content']}}</p>
+      </div>
+      <div class="card-footer text-muted">
+        {{ tweet['tweet_at'] }}
+      </div>
     </div>
-    <div class="card-body">
-      <h5 class="card-text"></h5>
-      <p class="card-title">{{tweet['tweet_content']}}</p>
-    </div>
-    <div class="card-footer text-muted">
-      {{ tweet['tweet_at'] }}
-    </div>
-  </div>
-{% endfor %}
+  {% endfor %}
   
 </div>
 
