--- a/templates/simple_base.html
+++ b/templates/simple_base.html
@@ -8,22 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href='{{url_for("static", filename="style.css")}}'>
+    <!-- Head Part -->
     <link rel="icon" href="{{url_for('static', filename='images/icon.ico')}}"/>
-
     <title>
         {% block title %}{% endblock %}:{{' '}} Twitter-4-Men
     </title>
+
 </head>
 <body>
-    {% block nav %}
+    {% block body %}
+    
     {% endblock %}
-
-    <div class="main">
-        {% block body %}
-        {% endblock %}
-    </div>
-</div>
-
 </body>
 </html>
