fixed tweeted time

--- a/templates/home.html
+++ b/templates/home.html
@@ -49,7 +49,7 @@
         <p class="card-title">{{tweet['tweet_content']}}</p>
       </div>
       <div class="card-footer text-muted">
-        {{ tweet['tweet_at'] }}
+        tweeted {{ tweet['tweet_at'] }}
       </div>
     </div>
   {% endfor %}
