--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,6 +8,21 @@
 
 <div class="body container gap-3">
     <div>
+        <!-- User Info -->
+        <div class="card shadow" id="{{ data['username'] }}">
+            <div class="card-body">
+              <h5 class="card-text">
+                  {% if data['name'] %}
+                    {{ data['name'] }}
+                  {% endif %}
+              </h5>
+              <p class="card-title"><a href="/user/{{ data['username'] }}">@{{ data['username'] }}</a></p>
+            </div>
+            <div class="card-content">
+              Joined {{ data['created_at'] }}, Has made {{ data['tweets_count'] }} tweets
+            </div>
+        </div>
+        <!-- User Tweets -->
         {% for tweet in data['tweets'] %}
             <div class="card shadow">
             <div class="card-header">
