--- a/templates/home_base.html
+++ b/templates/home_base.html
@@ -3,7 +3,7 @@
 {% block nav %}
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="{{url_for('static', filename='images/icon.ico')}}" alt="logo" width="30" height="30"></a>
+    <a class="navbar-brand" href="/"><img src="{{url_for('static', filename='images/icon.ico')}}" alt="logo" width="30" height="30"></a>
     
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
@@ -17,7 +17,7 @@
           <a class="nav-link" href="/user/{{ username }}">@{{ username }}</a>
         </li>
         <li class="nav-item">
-          <a href="logout" class="btn btn-outline-secondary">Logout</a>
+          <a href="logout" class="btn btn-outline-secondary" title="Logout"><i class="bi bi-box-arrow-right"></i></a>
         </li>
       </ul>
     </div>
