--- a/static/style.css
+++ b/static/style.css
@@ -24,6 +24,7 @@ textarea {
     min-height: 100vh;
     display: flex;
     align-items: center;
+    justify-content: center;
     margin: auto;
 }
 .form-paded{
