maybe final change

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -4,3 +4,69 @@
 Change Password
 {% endblock %}
 
+<div class="login-container container vertical">
+    <div>
+        {% if success and not step1 and not error %}
+            <div class="alert alert-success" role="alert">Your password was changed successfully.<br/> You can now proceed to <a href="/">Home</a>.</div>
+        {% endif %}
+        {% if error %}
+            <div class="alert alert-danger" role="alert">{{ error }}</div>
+        {% endif %}
+    
+        <div class="row card card-body shadow login-form-1">
+            <h4 class="h4 text-center">Change Password</h4>
+            <form method="POST" class="row g-3 form-paded">
+                <div class="col-12">
+                {% if step1 %}
+                    <label for="password" class="form-label">Old password</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="old_password" maxlength="300" minlength="8" required>
+                {% else %}
+                    <label for="password" class="form-label">New Password</label>
+                    <input type="password" class="form-control" name="password" id="password" placeholder="********" pattern="(?=.*\d)(?=.*[a-zA-Z]).{8,}" title="Must contain at least one Number and one Alphabet and at least 8 characters" minlength="8" required>
+                </div>
+                <div class="col-12">
+                    <label for="confirm-password" class="form-label">Re-enter New Password</label>
+                    <input type="password" class="form-control" name="confirm-password" id="confirm-password" placeholder ="********" required>
+                    <script>
+
+                        var password = document.getElementById("password"),
+                        var confirm_password = document.getElementById("confirm-password");
+                    
+                        function validatePassword() {
+                            if (password.value != confirm_password.value) {
+                                confirm_password.setCustomValidity("Passwords Don't Match");
+                            } else {
+                                confirm_password.setCustomValidity('');
+                                document.getElementById('submit').disabled = false
+                            }
+                        }
+                    
+                        password.onchange = validatePassword;
+                        confirm_password.onkeyup = validatePassword;
+                    </script>
+                {% endif %}
+                </div>
+                <button type="submit" class="btn btn-primary">Sign in!</button>
+            </form>
+            <p>New here? <a href="/signup" class="link-primary">Signup!</a><br />
+            <a href="/forgot" class="link-primary">Forgot Password?</a></p>
+        </div>
+    </div>
+</div>
+<script>
+
+    var password = document.getElementById("password"),
+    var confirm_password = document.getElementById("confirm-password");
+
+    function validatePassword() {
+        if (password.value != confirm_password.value) {
+            confirm_password.setCustomValidity("Passwords Don't Match");
+        } else {
+            confirm_password.setCustomValidity('');
+            document.getElementById('submit').disabled = false
+        }
+    }
+
+    password.onchange = validatePassword;
+    confirm_password.onkeyup = validatePassword;
+</script>
