--- a/templates/home_base.html
+++ b/templates/home_base.html
@@ -17,7 +17,7 @@
           <a class="nav-link" href="/user/{{ username }}">@{{ username }}</a>
         </li>
         <li class="nav-item">
-          <a href="logout" class="btn btn-outline-secondary" title="Logout"><i class="bi bi-box-arrow-right"></i></a>
+          <a href="/logout" class="btn btn-outline-secondary" title="Logout"><i class="bi bi-box-arrow-right"></i></a>
         </li>
       </ul>
     </div>
