--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,19 +17,19 @@
                     {% endif %}
                 </h5>
                 <form method="POST">
-                    {% if following is None %}
+                    {% if following is none %}
                         <!-- No follow button since it's your id -->
                     {% elif following == False %}
                         <button class="btn btn-primary" type="submit">Follow</button>
                     {% elif following == True %}
-                        <button class="btn btn-link" type="submit">unFollow</button>
+                        <a class="btn btn-link" href="/unfollow/{{ data['username'] }}">unFollow</a>
                     {% endif %}
                 </form>
             </div>
             <p><a href="/user/{{ data['username'] }}">@{{ data['username'] }}</a></p>
         </div>
         <div class="card-content card-footer">
-            Joined {{ data['created_at'] }}, Has made {{ data['number_tweets'] }} tweets. Has {{ data['followers'] }} Follwers
+            Joined {{ data['created_at'] }}, Has made {{ data['number_tweets'] }} tweets. Has {{ data['followers'] }} Followers
         </div>
     </div>
     <!-- User Tweets -->
